# Medbridge

./: .gitignore  Medbridge_Blog.md  README.md  _faqs.txt  _help_guide.txt  _themes.txt  pyproject.toml
Model/: README.md  adapter_config.json  train.ipynb
medbridge/: .dockerignore  Blog.md  Dockerfile  README.md  __init__.py  check_space.py  client.py  env.py  followups.py  inference.py  models.py  openenv.yaml  patients.py  pyproject.toml  reports.py  rewards.py
medbridge/server/: __init__.py  app.py  medbridge_environment.py
training/: train.ipynb  train.py  train_tmp_jupytext_27844.ipynb
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx  index.css
ui/src/components/: ChatInterface.jsx  PatientCard.jsx  RewardDashboard.jsx
